[package]
name = "hello-micro"
version = "1.0.0"
authors = ["Steven Byrnes <erewhon@flatland.org>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
indicatif = "0.11.0"
env_logger = "0.6.2"
serde_json = "1.0.40"
config = "0.9"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
tokio = "0.1"
# nom = "5"
crossbeam = "0.7"
juniper = "0.13.1"
reqwest = "0.9.20"

[dependencies.nom]
version = "^5"
features = ["regexp"]

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
